--- a/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
@@ -6,9 +6,8 @@
 @{
     Layout = "_HomeLayout";
 
-    var chapter = Model.Chapter;
     var viewModel = await ChapterViewModelService.GetGroupEventsPage(
-        Model.ServiceRequest, Model.CurrentMemberOrDefault, chapter);
+        Model.ChapterServiceRequest, Model.CurrentMemberOrDefault);
 
     Model.Title = $"Events | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
