--- a/ODK.Web.Razor/Pages/Groups/Events/Past.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Past.cshtml
@@ -6,9 +6,9 @@
 @{
     Layout = "_HomeLayout";
 
-    var chapter = Model.Chapter;
+    var request = Model.ChapterServiceRequest;
     var viewModel = await ChapterViewModelService.GetGroupPastEventsPage(
-        Model.ServiceRequest, Model.CurrentMemberOrDefault, chapter);
+        request, Model.CurrentMemberOrDefault);
 }
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
