--- a/ODK.Web.Razor/Pages/Groups/Group.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Group.cshtml
@@ -6,9 +6,9 @@
 @{
     Layout = "_HomeLayout";
 
-    var chapter = Model.Chapter;
+    var request = Model.ChapterServiceRequest;
     var viewModel = await ChapterViewModelService.GetGroupHomePage(
-        Model.ServiceRequest, Model.CurrentMemberOrDefault, chapter);
+        request, Model.CurrentMemberOrDefault);
 
     Model.Title = viewModel.Chapter.GetDisplayName(Model.Platform);
 
