--- a/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Event.cshtml
@@ -10,7 +10,7 @@
     Layout = "_HomeLayout";
 
     var viewModel = await EventViewModelService.GetEventPageViewModel(
-        Model.ChapterServiceRequest, Model.CurrentMemberOrDefault, Model.Shortcode);
+        Model.ChapterServiceRequest, Model.Shortcode);
 
     Model.Title = $"{viewModel.Event.GetDisplayName()} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
 }
