--- a/ODK.Web.Razor/Pages/Groups/Group/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Group/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page "/groups/{slug}"
 @using ODK.Services.Chapters
 @using ODK.Web.Razor.Models.Groups
-@model GroupModel
+@model IndexModel
 @inject IChapterViewModelService ChapterViewModelService
 @{
     Layout = "_HomeLayout";
