--- a/ODK.Web.Razor/Pages/Groups/Group/Join.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Group/Join.cshtml
@@ -4,7 +4,7 @@
 @using ODK.Services.Chapters
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Groups
-@model ODK.Web.Razor.Pages.Groups.JoinModel
+@model JoinModel
 @inject IChapterViewModelService ChapterViewModelService
 @{
     Layout = "_HomeLayout";
