--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupEditContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupEditContent.cshtml
@@ -10,7 +10,7 @@
         This group is still pending approval. You can continue to make changes but you won't be able to publish it until after approval.
     </div>
 }
-else if (!Model.Chapter.Published())
+else if (!Model.Chapter.IsPublished())
 {
     <div class="alert alert-danger">
         This group is not published
