--- a/ODK.Web.Razor/wwwroot/css/build.scss
+++ b/ODK.Web.Razor/wwwroot/css/build.scss
@@ -27,6 +27,7 @@
 @import "_footer";
 @import "_forms";
 @import "_google";
+@import "_groups";
 @import "_header";
 @import "_icons";
 @import "_links";
