--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupBody.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupBody.cshtml
@@ -9,23 +9,53 @@
     var memberChapter = Model.Group.CurrentMember?.MemberChapter(Model.Group.Chapter.Id);
 }
 
-@await Html.PartialAsync("Components/_Body", new BodyViewModel
-{
-    Breadcrumbs = Model.Breadcrumbs,
-    Menu = await Html.PartialAsync("Groups/_GroupMenu", Model.Group),
-    Title = Model.Group.Chapter.GetDisplayName(platform),
-    ContentFunc = 
-        @<div>
-            @if (memberChapter != null)
-            {
-                @await Html.PartialAsync("Chapters/_ApprovalWarning", memberChapter)
-            }
+@await Html.PartialAsync("Groups/_GroupPreviewBadge", Model.Group.Chapter)
 
-            @if (!string.IsNullOrEmpty(Model.Title))
-            {
-                <h2>@Model.Title</h2>
-            }
-            
-            @Model.Content
-        </div>
-})
+@if (Model.SidebarContent != null)
+{
+    @await Html.PartialAsync("Components/_BodyWithSidebar", new BodyWithSidebarViewModel
+    {
+        Breadcrumbs = Model.Breadcrumbs,
+        Class = "--group-body-with-sidebar",
+        Menu = await Html.PartialAsync("Groups/_GroupMenu", Model.Group),
+        SidebarContent = Model.SidebarContent,
+        Title = Model.Group.Chapter.GetDisplayName(platform),
+        ContentFunc =
+            @<div>
+                @if (memberChapter != null)
+                {
+                    @await Html.PartialAsync("Chapters/_ApprovalWarning", memberChapter)
+                }
+
+                @if (!string.IsNullOrEmpty(Model.Title))
+                {
+                        <h2>@Model.Title</h2>
+                }
+
+                @Model.Content
+            </div>
+    })
+}
+else
+{
+    @await Html.PartialAsync("Components/_Body", new BodyViewModel
+    {
+        Breadcrumbs = Model.Breadcrumbs,
+        Menu = await Html.PartialAsync("Groups/_GroupMenu", Model.Group),
+        Title = Model.Group.Chapter.GetDisplayName(platform),
+        ContentFunc =
+            @<div>   
+                @if (memberChapter != null)
+                {
+                    @await Html.PartialAsync("Chapters/_ApprovalWarning", memberChapter)
+                }
+
+                @if (!string.IsNullOrEmpty(Model.Title))
+                {
+                    <h2>@Model.Title</h2>
+                }
+
+                @Model.Content
+            </div>
+    })
+}
