--- a/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Events/Index.cshtml
@@ -8,7 +8,7 @@
 
     var viewModel = await ChapterViewModelService.GetGroupEventsPage(Model.ChapterServiceRequest);
 
-    Model.Title = $"Events | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
+    Model.Title = "Events";
 }
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
