--- a/ODK.Web.Razor/Pages/Groups/Group/Join.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Group/Join.cshtml
@@ -11,7 +11,7 @@
 
     var viewModel = await ChapterViewModelService.GetGroupJoinPage(Model.ChapterServiceRequest);
 
-    Model.Title = $"Join | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
+    Model.Title = "Join";
 }
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
