--- a/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Members/Index.cshtml
@@ -26,7 +26,7 @@
     }
 
     var title = StringUtils.Coalesce(chapterPage?.Title, "Members");
-    Model.Title = $"{title} | {viewModel.Chapter.GetDisplayName(Model.Platform)}";
+    Model.Title = title;
 }
 
 @await Html.PartialAsync("Groups/_GroupBody", new GroupBodyViewModel
