--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 
     if (chapter != null)
     {
-        title = $"{chapter.GetDisplayName(platform)} {title}";
+        title = $"{chapter.GetDisplayName(platform)} | {title}";
     }
 
     var pageTitle = ViewData["Title"] as string;
