Add site admin  impersonate to menu

--- a/ODK.Web.Razor/Pages/Shared/_SiteAdminLayout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_SiteAdminLayout.cshtml
@@ -13,6 +13,7 @@
         new MenuItem { Link = OdkRoutes.SiteAdmin.Errors, Text = "Error log" },
         new MenuItem { Link = OdkRoutes.SiteAdmin.Features, Text = "Features" },
         new MenuItem { Link = OdkRoutes.SiteAdmin.Groups, Text = "Groups" },
+        new MenuItem { Link = OdkRoutes.SiteAdmin.Impersonate, Text = "Impersonate" },
         new MenuItem { Link = OdkRoutes.SiteAdmin.Issues, Text = "Issues" },
         new MenuItem { Link = OdkRoutes.SiteAdmin.Messages, Text = "Messages" },
         new MenuItem { Link = OdkRoutes.SiteAdmin.Payments, Text = "Payments" },
