--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -38,7 +38,7 @@
             Venues = Model.Venues
         })
 
-        <div class="button-container">
+        <div class="button-container-md">
             <button type="submit" class="btn btn-primary">Create</button>
             <button type="submit" class="btn btn-secondary" name="draft" value="true">Save as draft</button>
         </div>
