--- a/ODK.Web.Razor/wwwroot/css/_sections.scss
+++ b/ODK.Web.Razor/wwwroot/css/_sections.scss
@@ -1,44 +1,49 @@
-.section:not(:first-child),
+.section {
+    background: var(--bs-body-bg);
+    color: var(--bs-body-color);
+}
+
 .mt-section {
     margin-top: 2rem;
 }
 
 .section--main {
-  padding-top: 30px;
-  padding-bottom: 90px;
+    padding-top: 30px;
+    padding-bottom: 90px;
 }
 
 .section--header,
 .section--footer {
-  padding: 1rem 0;
+    padding: 1rem 0;
 }
 
-.section--header h1 {
-  font-size: 2rem;
-	margin-bottom: 0;
+.section--header {
+    h1 {
+        font-size: 2rem;
+        margin-bottom: 0;
+    }
 }
 
 .section--hero {
-	background-position-y: 0;
-  padding: 50px 20px;
-  
-  align-items: center;
-  text-align: center;
-  display: flex;
-  justify-content: center;
+    background-position-y: 0;
+    padding: 50px 20px;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 .section--hero__content {
-	font-size: 1.4rem;
-  max-width: 760px;
-    
-  h1 {
-    font-size: 3rem;
+    font-size: 1.4rem;
+    max-width: 760px;
 
-    &:not(:first-child) {
-      margin-top: 4rem;
+    h1 {
+        font-size: 3rem;
+
+        &:not(:first-child) {
+            margin-top: 4rem;
+        }
     }
-  }    
 }
 
 .section--chapters {
@@ -47,15 +52,13 @@
 }
 
 .section--dark {
-  background: rgba(37,33,33,.6);
 }
 
 .section--light {
-  background: hsla(0,0%,88%,.6);
 }
 
-.section--dark .section--hero__content {
-	color: #fff;
+.section--grey {
+    background-color: hsla(0,0%,88%,.6);
 }
 
 .section--admin {
