--- a/ODK.Web.Razor/wwwroot/css/_variables.scss
+++ b/ODK.Web.Razor/wwwroot/css/_variables.scss
@@ -6,17 +6,16 @@ $odk-bg-dark-level-0-rgb: to-rgb($body-bg-dark);
 $odk-bg-light-level-1: darken($odk-bg-light-level-0, 5%);
 $odk-bg-light-level-1-rgb: to-rgb($odk-bg-light-level-1);
 $odk-bg-dark-level-1: lighten($odk-bg-dark-level-0, 5%);
-$odk-bg-dark-level-1-rgb: to-rgb($odk-bg-dark-level-1); 
+$odk-bg-dark-level-1-rgb: to-rgb($odk-bg-dark-level-1);
 
 $odk-bg-light-level-2: darken($odk-bg-light-level-1, 5%);
-$odk-bg-light-level-2-rgb: to-rgb($odk-bg-light-level-2); 
+$odk-bg-light-level-2-rgb: to-rgb($odk-bg-light-level-2);
 $odk-bg-dark-level-2: lighten($odk-bg-dark-level-1, 5%);
 $odk-bg-dark-level-2-rgb: to-rgb($odk-bg-dark-level-2);
 
-$odk-bg-light: #e9ecef;
-$odk-bg-dark: #212529;
-
 :root {
+    --odk-bg-level-0-light: #{$odk-bg-light-level-0};
+    --odk-bg-level-0-dark: #{$odk-bg-dark-level-0};
     --odk-bg-level-0: #{$odk-bg-light-level-0};
     --odk-bg-level-0-rgb: #{$odk-bg-light-level-0-rgb};
     --odk-bg-level-0-hover: #{lighten($odk-bg-light-level-0, 5%)};
@@ -26,7 +25,6 @@ $odk-bg-dark: #212529;
     --odk-bg-level-2: #{$odk-bg-light-level-2};
     --odk-bg-level-2-rgb: #{$odk-bg-light-level-2-rgb};
     --odk-bg-level-2-hover: #{lighten($odk-bg-light-level-2, 5%)};
-    
     --odk-color-placeholder: var(--bs-secondary-color);
 }
 
