--- a/ODK.Web.Razor/wwwroot/css/_buttons.scss
+++ b/ODK.Web.Razor/wwwroot/css/_buttons.scss
@@ -1,39 +1,52 @@
 .btn-icon {
-	background-color: transparent;
-  border: none;
-  padding: 0;
+    background-color: transparent;
+    border: none;
+    padding: 0;
 }
 
 .btn-link {
-	align-content: center;
-	padding: 0;
+    align-content: center;
+    padding: 0;
 }
 
 .accordion .btn-link {
-  padding: 0;
-  text-align: left;
+    padding: 0;
+    text-align: left;
 }
 
 .btn-overlay {
-  position: absolute;  
+    position: absolute;
 }
 
 .btn-overlay--top-right {
-  top: 0;
-  right: 10px;
+    top: 0;
+    right: 10px;
 }
 
 .btn-overlay--bottom-right {
-  bottom: 0;
-  right: 10px;
+    bottom: 0;
+    right: 10px;
 }
 
 .btn-success {
-	--bs-btn-color: #fff;
+    --bs-btn-color: #fff;
+}
+
+@mixin button-container {
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
 }
 
 .button-container {
-	display: flex;
-	gap: 0.5rem;
-	align-items: center;
+    @include button-container;
+}
+
+.button-container-md {
+    @include button-container;
+    flex-direction: column;
+
+    @include media-breakpoint-up(md) {
+        flex-direction: row;
+    }
 }
